[project]
name = "findlike"
version = "1.4.1"
authors = [{ name = "Bruno Arine", email = "bruno.arine@runbox.com" }]
description = "findlike is a package to retrieve similar documents"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "nltk ~= 3.8",
    "numpy ~= 1.21.6",
    "scikit-learn ~= 1.0.2",
    "rank-bm25 ~= 0.2.2",
    "stop-words ~= 2018.7.23"
]

[project.urls]
"Homepage" = "http://www.github.com/brunoarine/findlike"
"Repository" = "https://github.com/brunoarine/findlike.git"
"Bug Tracker" = "http://www.github.com/brunoarine/findlike/issues"

[project.scripts]
findlike = "findlike.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project.optional-dependencies]
dev = [
    "build ~= 0.10.0",
    "black ~= 23.3.0",
    "twine ~= 4.0.2",
    "pylint ~= 2.17.4",
    "mypy ~= 1.4.0",
    "flake8 ~= 5.0.4",
    "pytest ~= 7.4.0",
]