[project]
name = "findlike"
version = "2.0.0"
authors = [{ name = "Bruno Arine", email = "bruno.arine@runbox.com" }]
description = "findlike is a package to retrieve similar documents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "nltk >= 3.9.1",
    "numpy ~= 1.26.4",
    "scikit-learn >= 1.1.0",
    "rank-bm25 >= 0.2.2",
    "stop-words >= 2018.7.23",
    "click >= 8.1.8",
]

[project.urls]
"Homepage" = "http://www.github.com/brunoarine/findlike"
"Repository" = "https://github.com/brunoarine/findlike.git"
"Bug Tracker" = "http://www.github.com/brunoarine/findlike/issues"

[project.scripts]
findlike = "findlike.cli:cli"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 79

[dependency-groups]
dev = [
    "build",
    "black",
    "twine",
    "pylint",
    "mypy",
    "flake8",
    "pytest"
]
